[gd_scene load_steps=3 format=2]

[ext_resource path="res://source/menu/register_panel/RegisterPanel.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/content.tres" type="DynamicFont" id=2]

[node name="RegisterPanel" type="PanelContainer"]
margin_left = 7.0
margin_top = 31.0
margin_right = 213.0
margin_bottom = 231.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 206.0
margin_bottom = 273.0
grow_horizontal = 2
grow_vertical = 2

[node name="EmailLabel" type="Label" parent="VBoxContainer"]
margin_right = 199.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Email:"
align = 1
valign = 1

[node name="EmailLine" type="LineEdit" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 199.0
margin_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="PasswordLabel" type="Label" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 199.0
margin_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Password:"
align = 1
valign = 1

[node name="PasswordLine" type="LineEdit" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 199.0
margin_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
align = 1
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="PasswordRepeatLabel" type="Label" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 199.0
margin_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Repeat Password:"
align = 1
valign = 1

[node name="PasswordRepeatLine" type="LineEdit" parent="VBoxContainer"]
margin_top = 140.0
margin_right = 199.0
margin_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
align = 1
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 174.0
margin_right = 199.0
margin_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2

[node name="Remember" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 171.0
margin_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Agree to Terms of Servise"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 175.0
margin_right = 199.0
margin_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2

[node name="Register" type="Button" parent="VBoxContainer"]
margin_top = 202.0
margin_right = 199.0
margin_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 10
custom_fonts/font = ExtResource( 2 )
text = "Register"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 232.0
margin_right = 199.0
margin_bottom = 236.0

[node name="LoginTab" type="Button" parent="VBoxContainer"]
margin_top = 240.0
margin_right = 199.0
margin_bottom = 266.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Login into existing account"

[connection signal="pressed" from="VBoxContainer/Register" to="." method="_on_Register_pressed"]
[connection signal="pressed" from="VBoxContainer/LoginTab" to="." method="_on_LoginTab_pressed"]
